Format eslint
