# swagger/swagger.json
@@ -1,29 +1,6 @@
 {
 	"basePath": "/api",
 	"definitions": {
-		"WarMessageOutDto": {
-			"description": "",
-			"properties": {
-				"deathStar": {
-					"type": "string",
-					"description": ""
-				},
-				"planet": {
-					"type": "string",
-					"description": ""
-				}
-			},
-			"type": "object",
-			"required": [
-				"deathStar",
-				"planet"
-			]
-		},
-		"ContextDamageInDto": {
-			"description": "",
-			"properties": {},
-			"type": "object"
-		},
 		"WeaponSql": {
 			"description": "",
 			"properties": {
@@ -75,6 +52,32 @@
 				"shield"
 			]
 		},
+		"FireMethodOutDto": {
+			"description": "",
+			"properties": {
+				"weapon": {
+					"$ref": "#/definitions/WeaponSql"
+				},
+				"planet": {
+					"$ref": "#/definitions/PlanetSql"
+				},
+				"message": {
+					"type": "string",
+					"description": ""
+				}
+			},
+			"type": "object",
+			"required": [
+				"weapon",
+				"planet",
+				"message"
+			]
+		},
+		"ContextDamageInDto": {
+			"description": "",
+			"properties": {},
+			"type": "object"
+		},
 		"DefendOutDto": {
 			"description": "",
 			"properties": {
@@ -108,7 +111,7 @@
 					"200": {
 						"description": "Ok",
 						"schema": {
-							"$ref": "#/definitions/WarMessageOutDto"
+							"$ref": "#/definitions/FireMethodOutDto"
 						}
 					}
 				},
